// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icon after renders as expected 1`] = `
<span
  className="flex flex--center-cross"
>
  <span>
    Next
  </span>
  <span
    className="ml6"
  >
    <Icon
      inline={false}
      name="chevron-right"
      passthroughProps={Object {}}
      size={18}
    />
  </span>
</span>
`;

exports[`icon before renders as expected 1`] = `
<span
  className="flex flex--center-cross"
>
  <span
    className="mr6"
  >
    <Icon
      inline={false}
      name="clipboard"
      passthroughProps={Object {}}
      size={18}
    />
  </span>
  <span>
    Copy
  </span>
</span>
`;

exports[`icons on both sides, including a non-string one renders as expected 1`] = `
<span
  className="flex flex--center-cross"
>
  <span
    className="mr6"
  >
    <Icon
      inline={false}
      name="check"
      passthroughProps={Object {}}
      size={18}
    />
  </span>
  <span>
    What
  </span>
  <span
    className="ml6"
  >
    <Icon
      inline={false}
      name="github"
      passthroughProps={Object {}}
      size={18}
    />
  </span>
</span>
`;

exports[`inline flex parent renders as expected 1`] = `
<span
  className="inline-flex flex--center-cross"
>
  <span
    className="mr6"
  >
    <Icon
      inline={false}
      name="polyline"
      passthroughProps={Object {}}
      size={18}
    />
  </span>
  <span>
    Inline!
  </span>
</span>
`;

exports[`large gap renders as expected 1`] = `
<span
  className="flex flex--center-cross"
>
  <span
    className="mr6"
  >
    <Icon
      inline={false}
      name="check"
      passthroughProps={Object {}}
      size={18}
    />
  </span>
  <span>
    Done
  </span>
</span>
`;
